finished integrate library installer for raspberry pi. Attention needs for install/remove algorithm